messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-app
  labels:
    app: django-messaging
    version: blue
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0 
  selector:
    matchLabels:
      app: django-messaging
      version: blue
  template:
    metadata:
      labels:
        app: django-messaging
        version: blue
    spec:
      containers:
      - name: django-app
        image: your-docker-username/django-messaging-app:2.0  # Replace with your actual image
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  type: ClusterIP
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
